@@ -26,7 +26,7 @@ classifiers = [
 ]
 license = "GPL-3.0-or-later"
 dependencies = [
-    "dclab[dcor]>=0.62.11",
+    "dclab[dcor]>=0.64.2",
     "numpy>=1.21",
     "requests>=2.31",  # CVE-2023-32681
     "urllib3>=2.0",  # requests_toolbelt and general compatibility
